# ioc

./: .gitignore  Cargo.toml  README.md
examples/: example1.rs  physics.rs
src/: container.rs  error.rs  errors.rs  factory.rs  guards.rs  invocation_method.rs  ioc.rs  lib.rs  macros.rs  methods.rs  pipeline.rs  reflect.rs  register.rs  service.rs  staged_ioc.rs  wiring.rs
tests/: single_alternative_options.rs
