[package]
name = "qregister"
version = "0.1.0"
authors = ["qrlpx <>"]
keywords = ["ioc", "di", "inversion of control", "dependency injection"]
description = "A simple IoC (Inversion of Control) container."

repository = "https://github.com/qrlpx/qregister"
documentation = "https://qrlpx.github.io/qregister/qregister"

license = "CC0-1.0"

[dependencies]
qdowncast = "^0.1"
qindex_multi = "^0.4"
rustc-serialize = "^0.3"

